--- a/information.css
+++ b/information.css
@@ -1,24 +1,29 @@
+.server
+{
+  width: 243px;
+  margin-top: 40px;
+  top: 524.23px;
+  margin: auto;
+  margin-top: 264px;
+}
+
 .new{
-  position: absolute;
 width: 68.78px;
 height: 17.74px;
-left: 423px;
-top: 524.23px;
-
 font-family: 'Pretendard Variable';
 font-style: normal;
 font-weight: 400;
 font-size: 15px;
 line-height: 18px;
 text-align: center;
+padding-right: 117.17px;
+
 }
 
 .no-id{
 
-position: absolute;
 width: 91.27px;
 height: 17.74px;
-left: 540.17px;
 top: 524.23px;
 
 font-family: 'Pretendard Variable';
