--- a/loginstyle.css
+++ b/loginstyle.css
@@ -2,9 +2,27 @@
   font-family: 'Pretendard Variable';
 }
 
+body
+{
+  width: 100%;
+}
+
+.logo
+{
+  width: 129px;
+  height: 99px;
+  margin: auto;
+  margin-top: 154px;
+}
+
+form
+{
+  width: 396px;
+  height: 400px;
+  margin: auto;
+}
+
 img{
-  left: 463px;
-  top: 154px;
   position: absolute;
 }
 
@@ -12,7 +30,6 @@ img{
   position: absolute;
   width: 409px;
   height: 56.18px;
-  left: 323px;
   top: 319px;
 }
 
@@ -28,7 +45,6 @@ img{
   margin-bottom: 50px;
   width: 409px;
   height: 56.18px;
-  left: 323px;
   top: 375.18px;
   background: #FFFFFF;
   border-radius: 10px;
@@ -38,7 +54,6 @@ img{
   position: absolute;
   width: 409px;
   height: 59.13px;
-  left: 323px;
   top: 434.83px;
   background: #ADECEC;
   border-radius: 10px;
